# KritiC

./: .commitlintrc.yml  .gitignore  CMakeLists.txt  Makefile  kritic.h  kritic.pc  kritic.pc.in  readme.md
.github/workflows/: bump-version.yml  create-git-tag.yml  manual-version-tagger.yml  release.yml  tag-chain.yml  unittest.yml
docs/: expected_output.txt
include/kritic/: assert_types.h  attributes.h  defaults.h  kritic.h  redirect.h  scheduler.h
src/: attributes.c  attributes.h  defaults.c  defaults.h  kritic.c  redirect.c  redirect.h  scheduler.c  scheduler.h  timer.c  timer.h
tests/: CMakeLists.txt  assertions.c  attributes.c  core.c  indirect.c  io.c
tools/: bump_version.sh  sanitize.sh  strip_ms.sh
